# cmdgpt

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  BATCH1_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONCURRENCY_ANALYSIS.md  CONCURRENCY_FIXES.md  CONTRIBUTING.md  DOCUMENTATION_STATUS.md  Doxyfile  LICENSE  README.md  V0.5.0_STATUS.md  WORKFLOW.md  build.sh  build_docs.sh  build_osx.sh  check_code_quality.sh  cmdgpt.cpp  cmdgpt.h  demo_show_tokens.sh  gptcmd.cpp  main.cpp  mainpage.dox  package-lock.json  quick_build.sh
.github/workflows/: build.yml  ci.yml
docs/: Doxyfile  README.md  mainpage.dox
docs/html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  index.js  inherit_graph_0.dot  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.dot  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.dot  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.dot  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  (+4 more)
docs/html/d0/d05/: namespacecmdgpt.html  namespacecmdgpt.js  namespacecmdgpt_a19ed2e07630c91548444910087b275fb_cgraph.dot  namespacecmdgpt_a19ed2e07630c91548444910087b275fb_cgraph.map  namespacecmdgpt_a19ed2e07630c91548444910087b275fb_cgraph.md5  namespacecmdgpt_a19ed2e07630c91548444910087b275fb_icgraph.dot  namespacecmdgpt_a19ed2e07630c91548444910087b275fb_icgraph.map  namespacecmdgpt_a19ed2e07630c91548444910087b275fb_icgraph.md5  namespacecmdgpt_a2895b5184013a652d36d88ad5cb3edda_icgraph.dot  namespacecmdgpt_a2895b5184013a652d36d88ad5cb3edda_icgraph.map  namespacecmdgpt_a2895b5184013a652d36d88ad5cb3edda_icgraph.md5  namespacecmdgpt_a2a8346a32e6ad2d2a118e0c3a084761e_icgraph.dot  namespacecmdgpt_a2a8346a32e6ad2d2a118e0c3a084761e_icgraph.map  namespacecmdgpt_a2a8346a32e6ad2d2a118e0c3a084761e_icgraph.md5  namespacecmdgpt_a5388bc50f7e07fa57f66b229d1a0e0f5_icgraph.dot  namespacecmdgpt_a5388bc50f7e07fa57f66b229d1a0e0f5_icgraph.map  namespacecmdgpt_a5388bc50f7e07fa57f66b229d1a0e0f5_icgraph.md5  namespacecmdgpt_aa671517c84d1e5bab477438aca0cf82d_icgraph.dot  namespacecmdgpt_aa671517c84d1e5bab477438aca0cf82d_icgraph.map  namespacecmdgpt_aa671517c84d1e5bab477438aca0cf82d_icgraph.md5  namespacecmdgpt_abcc790498ee037eb555d423c215da863_icgraph.dot  namespacecmdgpt_abcc790498ee037eb555d423c215da863_icgraph.map  namespacecmdgpt_abcc790498ee037eb555d423c215da863_icgraph.md5  namespacecmdgpt_abced6f324d1b470766d2a964e5f6d108_cgraph.dot  namespacecmdgpt_abced6f324d1b470766d2a964e5f6d108_cgraph.map  namespacecmdgpt_abced6f324d1b470766d2a964e5f6d108_cgraph.md5  namespacecmdgpt_abf82caf2672c9725565702d40cd379e6_cgraph.dot  namespacecmdgpt_abf82caf2672c9725565702d40cd379e6_cgraph.map  namespacecmdgpt_abf82caf2672c9725565702d40cd379e6_cgraph.md5  namespacecmdgpt_abf82caf2672c9725565702d40cd379e6_icgraph.dot  namespacecmdgpt_abf82caf2672c9725565702d40cd379e6_icgraph.map  namespacecmdgpt_abf82caf2672c9725565702d40cd379e6_icgraph.md5  namespacecmdgpt_afb5e8c9dbc15f7a9d64aa1e3351cec25_icgraph.dot  namespacecmdgpt_afb5e8c9dbc15f7a9d64aa1e3351cec25_icgraph.map  namespacecmdgpt_afb5e8c9dbc15f7a9d64aa1e3351cec25_icgraph.md5  namespacecmdgpt_afcc71e70bfea7ed640705a027ca741e4_cgraph.dot  namespacecmdgpt_afcc71e70bfea7ed640705a027ca741e4_cgraph.map  namespacecmdgpt_afcc71e70bfea7ed640705a027ca741e4_cgraph.md5
docs/html/d0/d8b/: classcmdgpt_1_1ValidationException__coll__graph.dot  classcmdgpt_1_1ValidationException__coll__graph.map
docs/html/d0/d91/: classcmdgpt_1_1CmdGptException__inherit__graph.dot  classcmdgpt_1_1CmdGptException__inherit__graph.map  classcmdgpt_1_1CmdGptException__inherit__graph.md5
docs/html/d1/d77/: classcmdgpt_1_1NetworkException__inherit__graph.dot
docs/html/d2/dbb/: classcmdgpt_1_1ApiException__inherit__graph.dot
docs/html/d3/d46/: classcmdgpt_1_1ConfigFile.html  classcmdgpt_1_1ConfigFile.js  classcmdgpt_1_1ConfigFile_a6e687d51c054183b61ad336714cc6897_icgraph.dot  classcmdgpt_1_1ConfigFile_a6e687d51c054183b61ad336714cc6897_icgraph.map  classcmdgpt_1_1ConfigFile_a6e687d51c054183b61ad336714cc6897_icgraph.md5  classcmdgpt_1_1ConfigFile_a885b77f9decce10ebce9de898f884afe_cgraph.dot  classcmdgpt_1_1ConfigFile_a885b77f9decce10ebce9de898f884afe_cgraph.map  classcmdgpt_1_1ConfigFile_a885b77f9decce10ebce9de898f884afe_cgraph.md5  classcmdgpt_1_1ConfigFile_a885b77f9decce10ebce9de898f884afe_icgraph.dot  classcmdgpt_1_1ConfigFile_a885b77f9decce10ebce9de898f884afe_icgraph.map  classcmdgpt_1_1ConfigFile_a885b77f9decce10ebce9de898f884afe_icgraph.md5  (+9 more)
docs/html/d3/d89/: cmdgpt_8h.html  cmdgpt_8h.js  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  (+46 more)
examples/: README.md  code_reviewer.sh  format_examples.sh  pipe_integration.sh  simple_query.sh  streaming_example.sh
include/: README.md  base64.h  cmdgpt.h  file_lock.h  file_rate_limiter.h  file_utils.h
scripts/: README.md  build_docs.sh  check_all.sh  check_code_quality.sh  cmdgpt-completion.bash  cmdgpt-completion.zsh  cppcheck_suppressions.txt  install-completions.sh  quick_build.sh  run_clang_format.sh  run_clang_tidy.sh  run_cppcheck.sh
src/: README.md  base64.cpp  cmdgpt.cpp  cmdgpt.h  file_lock.cpp  file_rate_limiter.cpp  file_utils.cpp  main.cpp
tests/: README.md  cmdgpt_tests.cpp
(+158 files in other folders)
